# online-shopping-agentic-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  README.md  app.py  docker-compose.yml  pyproject.toml
data/: eval_qa_pairs.json  faqs.json  orders.json  policies.json  products.json  stock.json
mcp_server/: server.py
src/: config.py  main.py
src/agents/: action_agent.py  faq_agent.py  orchestrator.py
src/guardrails/: safety.py
src/monitoring/: evaluator.py  logger.py
src/rag/: ingestion.py  retriever.py
src/tools/: grocery_tools.py  mcp_tool.py
