[project]
name = "online-shopping-agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain>=1.0.8",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.10.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
